--- a/web/package.json
+++ b/web/package.json
@@ -3,19 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "webpack -d --watch --display-error-details",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "bundle-css_2": "sass --watch assets/sass:public/stylesheets",
+    "bundle-js": "webpack --config webpack.config.js --display-error-details --colors --watch"
   },
   "dependencies": {
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "material-ui": "^0.18.7",
     "mongoose": "^4.6.3",
     "morgan": "~1.7.0",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.10.2",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "serve-favicon": "~2.3.0",
+    "webpack": "^3.5.4"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
